[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dliswriter"
version = "0.0.10"
authors = [
  { name="Dominika Dlugosz", email="dominika.dlugosz@wellid.no" },
  { name="Magne Lauritzen", email="magne.lauritzen@wellid.no" },
  { name="Kamil Grunwald", email="kamil.grunwald@wellid.no" },
  { name = "Omer Faruk Sari" }
]
description = "A package for creating DLIS files."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "h5py = 3.6.0",
  "numpy >= 1.21.2",
  "progressbar2 >= 4.0.0",
  "pytz",
  "typing_extensions >= 4.5.0",
]
[project.urls]
"Homepage" = "https://github.com/well-id/dliswriter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
