[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dliswriter"
version = "1.0.0"
authors = [
  { name="Dominika Dlugosz", email="dominika.dlugosz@wellid.no" },
  { name="Magne Lauritzen", email="magne.lauritzen@wellid.no" },
  { name="Kamil Grunwald", email="kamil.grunwald@wellid.no" },
  { name = "Omer Faruk Sari" }
]
maintainers = [
  { name="Dominika Dlugosz", email="dominika.dlugosz@wellid.no" }
]
description = "An open-source Python package for writing DLIS files."
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Topic :: File Formats",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "data",
    "drilling",
    "dlis",
    "RP66",
    "RP66 v1",
    "oil and gas",
    "petroleum engineering",
    "well logging",
    "well imaging",
    "dlisio",
    "binary file IO"
]
dependencies = [
  "h5py",
  "numpy >= 1.19.2",
  "progressbar2",
  "typing_extensions >= 4.0.1",
]
[project.urls]
"Homepage" = "https://github.com/well-id/dliswriter"
"Documentation" = "https://well-id-widcdliswriter.readthedocs-hosted.com/"
"Issues" = "https://github.com/well-id/dliswriter/issues"
"Changelog" = "https://well-id-widcdliswriter.readthedocs-hosted.com/changelog.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed", "logo.png"]
